--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,5 +1,6 @@
 set_real_ip_from 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
+set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:220:3039:101:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
@@ -20,6 +21,7 @@ set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
 set_real_ip_from 2001:41d0:a:5c0::1;
+set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -116,6 +118,7 @@ set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
+set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 2400:8904::f03c:93ff:fe68:23b3;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -144,6 +147,7 @@ set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:3:610a:5050::;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
+set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
@@ -226,6 +230,7 @@ set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
+set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fe09::2;
@@ -275,6 +280,7 @@ set_real_ip_from 2620:7:6001::150;
 set_real_ip_from 2620:7:6001::151;
 set_real_ip_from 2620:7:6001::152;
 set_real_ip_from 2620:7:6001::153;
+set_real_ip_from 2620:7:6001::154;
 set_real_ip_from 2620:7:6001::155;
 set_real_ip_from 2620:7:6001::156;
 set_real_ip_from 2620:7:6001::157;
@@ -332,6 +338,8 @@ set_real_ip_from 2620:7:6001::ffff:c759:e651;
 set_real_ip_from 2620:7:6001::ffff:c759:e652;
 set_real_ip_from 2620:7:6001::ffff:c759:e653;
 set_real_ip_from 2620:7:6001::ffff:c759:e654;
+set_real_ip_from 2620:7:6001::ffff:c759:e655;
+set_real_ip_from 2620:7:6001::ffff:c759:e656;
 set_real_ip_from 2620:7:6001::ffff:c759:e657;
 set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
@@ -357,6 +365,7 @@ set_real_ip_from 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e03::f03c:94ff:fe7d:8250;
+set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 set_real_ip_from 2a02:13f0:8100:6:6bc:499d:b353:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -490,6 +499,7 @@ set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
+set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
@@ -541,6 +551,7 @@ set_real_ip_from 2a0b:f4c2:1::155;
 set_real_ip_from 2a0b:f4c2:1::156;
 set_real_ip_from 2a0b:f4c2:1::157;
 set_real_ip_from 2a0b:f4c2:1::158;
+set_real_ip_from 2a0b:f4c2:1::159;
 set_real_ip_from 2a0b:f4c2:1::160;
 set_real_ip_from 2a0b:f4c2:1::161;
 set_real_ip_from 2a0b:f4c2:1::162;
@@ -678,6 +689,7 @@ set_real_ip_from 2a0c:2500:571:3b8:2703:f58a:8b07:7801;
 set_real_ip_from 2a0c:2500:571:3b8:c584:d85:46e9:56ef;
 set_real_ip_from 2a0c:2500:571:3b8:caf7:be28:d452:b708;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
@@ -694,10 +706,12 @@ set_real_ip_from 2a0f:df00:0:255::197;
 set_real_ip_from 2a0f:df00:0:255::198;
 set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
+set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
+set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a0f:e586:f:f::188;
@@ -720,3 +734,4 @@ set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
+set_real_ip_from 2a12:a800:2:1:45:138:16:203;
